substrate/frame/support/test/tests/pallet_ui/type_value_no_return.stderr
error: Invalid pallet::type_value, expected return type
  --> tests/pallet_ui/type_value_no_return.rs:35:24
   |
35 |     #[pallet::type_value] fn Foo() {}
   |                           ^^
